apps/sharecodex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharecodex
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sharecodex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sharecodex
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: sharecodex
          image: ghcr.io/koukeneko/sharecodex-server
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 30
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
